fixed project page control spacing

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ a {
 header {
     height: 100vh;
     color: var(--color-dark);
-    overflow: hidden;
 }
 
 section {
@@ -195,7 +194,7 @@ p {
   }
 
   .flexify {
-    margin: -50% 0% 0% 12%;
+    margin: 0% 0% 0% 12%;
     width: 68%;
     display: flex;
     flex-direction: row;
